// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditInPlace > disables control when disabled 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
    >
      <label
        class="_label_dc87d2"
        for="radix-:r7m:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          class="_control_a839aa"
          disabled=""
          id="radix-:r7m:"
          name="input"
          title=""
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > displays saved label for 2 seconds after save 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
    >
      <label
        class="_label_dc87d2"
        for="radix-:r61:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          class="_control_a839aa"
          id="radix-:r61:"
          name="input"
          title=""
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > displays saved label for 2 seconds after save 2`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
      data-valid="true"
    >
      <label
        class="_label_dc87d2"
        data-valid="true"
        for="radix-:r61:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          aria-describedby="radix-:r6g:"
          class="_control_a839aa"
          data-valid="true"
          disabled=""
          id="radix-:r61:"
          name="input"
          title=""
        />
        <div
          class="_button-group_980156"
        >
          <button
            aria-disabled="true"
            aria-labelledby=":r62:"
            class="_button_2a1efe _has-icon_2a1efe _icon-only_2a1efe"
            data-kind="primary"
            data-size="sm"
            role="button"
            tabindex="0"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="_icon_2a1efe"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575c-.133 0-.258-.02-.375-.063a.876.876 0 0 1-.325-.212L4.55 13c-.183-.183-.27-.42-.263-.713.009-.291.105-.529.288-.712a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275L9.55 15.15l8.475-8.475c.183-.183.42-.275.713-.275.291 0 .529.092.712.275.183.183.275.42.275.713 0 .291-.092.529-.275.712l-9.2 9.2c-.1.1-.208.17-.325.212a1.106 1.106 0 0 1-.375.063Z"
              />
            </svg>
          </button>
          <button
            aria-disabled="true"
            aria-labelledby=":r68:"
            class="_button_2a1efe _button_980156 _has-icon_2a1efe _icon-only_2a1efe"
            data-kind="secondary"
            data-size="sm"
            role="button"
            tabindex="0"
            type="reset"
          >
            <svg
              aria-hidden="true"
              class="_icon_2a1efe"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="_message_dc87d2"
        id="radix-:r6g:"
      >
        <svg
          class="_icon_01cd2d"
          fill="currentColor"
          height="1em"
          style="width: 20px; height: 20px;"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 4.031a8 8 0 1 0 8 8 1 1 0 0 1 2 0c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10a1 1 0 1 1 0 2Z"
            fill-rule="evenodd"
          />
        </svg>
        Saving...
      </span>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > displays saved label for 2 seconds after save 3`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
      data-valid="true"
    >
      <label
        class="_label_dc87d2"
        data-valid="true"
        for="radix-:r61:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          aria-describedby="radix-:r6h:"
          class="_control_a839aa"
          data-valid="true"
          id="radix-:r61:"
          name="input"
          title=""
        />
      </div>
      <span
        class="_message_dc87d2 _success-message_dc87d2"
        id="radix-:r6h:"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m10.6 13.8-2.15-2.15a.948.948 0 0 0-.7-.275.948.948 0 0 0-.7.275.948.948 0 0 0-.275.7.95.95 0 0 0 .275.7L9.9 15.9c.2.2.433.3.7.3.267 0 .5-.1.7-.3l5.65-5.65a.948.948 0 0 0 .275-.7.948.948 0 0 0-.275-.7.948.948 0 0 0-.7-.275.948.948 0 0 0-.7.275L10.6 13.8ZM12 22a9.738 9.738 0 0 1-3.9-.788 10.099 10.099 0 0 1-3.175-2.137c-.9-.9-1.612-1.958-2.137-3.175A9.738 9.738 0 0 1 2 12a9.74 9.74 0 0 1 .788-3.9 10.099 10.099 0 0 1 2.137-3.175c.9-.9 1.958-1.612 3.175-2.137A9.738 9.738 0 0 1 12 2a9.74 9.74 0 0 1 3.9.788 10.098 10.098 0 0 1 3.175 2.137c.9.9 1.613 1.958 2.137 3.175A9.738 9.738 0 0 1 22 12a9.738 9.738 0 0 1-.788 3.9 10.098 10.098 0 0 1-2.137 3.175c-.9.9-1.958 1.613-3.175 2.137A9.738 9.738 0 0 1 12 22Z"
          />
        </svg>
        Saved
      </span>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > renders 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
    >
      <label
        class="_label_dc87d2"
        for="radix-:r0:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          class="_control_a839aa"
          id="radix-:r0:"
          name="input"
          title=""
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > renders error icon and text if passed as children 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
      data-invalid="true"
    >
      <label
        class="_label_dc87d2"
        data-invalid="true"
        for="radix-:rh:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          aria-describedby="radix-:ri:"
          aria-invalid="true"
          class="_control_a839aa"
          data-invalid="true"
          id="radix-:rh:"
          name="input"
          title=""
        />
        <div
          class="_button-group_980156"
        >
          <button
            aria-disabled="true"
            aria-labelledby=":rj:"
            class="_button_2a1efe _has-icon_2a1efe _icon-only_2a1efe"
            data-kind="primary"
            data-size="sm"
            role="button"
            tabindex="0"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="_icon_2a1efe"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575c-.133 0-.258-.02-.375-.063a.876.876 0 0 1-.325-.212L4.55 13c-.183-.183-.27-.42-.263-.713.009-.291.105-.529.288-.712a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275L9.55 15.15l8.475-8.475c.183-.183.42-.275.713-.275.291 0 .529.092.712.275.183.183.275.42.275.713 0 .291-.092.529-.275.712l-9.2 9.2c-.1.1-.208.17-.325.212a1.106 1.106 0 0 1-.375.063Z"
              />
            </svg>
          </button>
          <button
            aria-disabled="false"
            aria-labelledby=":rp:"
            class="_button_2a1efe _button_980156 _has-icon_2a1efe _icon-only_2a1efe"
            data-kind="secondary"
            data-size="sm"
            role="button"
            tabindex="0"
            type="reset"
          >
            <svg
              aria-hidden="true"
              class="_icon_2a1efe"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="_message_dc87d2 _error-message_dc87d2"
        id="radix-:ri:"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17a.97.97 0 0 0 .713-.288A.968.968 0 0 0 13 16a.968.968 0 0 0-.287-.713A.968.968 0 0 0 12 15a.968.968 0 0 0-.713.287A.968.968 0 0 0 11 16c0 .283.096.52.287.712.192.192.43.288.713.288Zm0-4c.283 0 .52-.096.713-.287A.968.968 0 0 0 13 12V8a.967.967 0 0 0-.287-.713A.968.968 0 0 0 12 7a.968.968 0 0 0-.713.287A.967.967 0 0 0 11 8v4c0 .283.096.52.287.713.192.191.43.287.713.287Zm0 9a9.738 9.738 0 0 1-3.9-.788 10.099 10.099 0 0 1-3.175-2.137c-.9-.9-1.612-1.958-2.137-3.175A9.738 9.738 0 0 1 2 12a9.74 9.74 0 0 1 .788-3.9 10.099 10.099 0 0 1 2.137-3.175c.9-.9 1.958-1.612 3.175-2.137A9.738 9.738 0 0 1 12 2a9.74 9.74 0 0 1 3.9.788 10.098 10.098 0 0 1 3.175 2.137c.9.9 1.613 1.958 2.137 3.175A9.738 9.738 0 0 1 22 12a9.738 9.738 0 0 1-.788 3.9 10.098 10.098 0 0 1-2.137 3.175c-.9.9-1.958 1.613-3.175 2.137A9.738 9.738 0 0 1 12 22Z"
          />
        </svg>
        Missing Left Falangey
      </span>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > uses native form validation logic 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
    >
      <label
        class="_label_dc87d2"
        for="radix-:r11:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          class="_control_a839aa"
          id="radix-:r11:"
          name="input"
          required=""
          title=""
          type="email"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > uses the custom error messages passed as children 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2"
  >
    <div
      class="_field_dc87d2"
    >
      <label
        class="_label_dc87d2"
        for="radix-:r1i:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          class="_control_a839aa"
          id="radix-:r1i:"
          name="input"
          title=""
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;
